# hermes-agent

./: .gitignore  AGENTS.md  README.md  SOUL.md
config/: va-tolling.env.example  ynab.env.example
docs/runbooks/: codex-bridge.md  hermes-chat-abort-honcho-prefetch.md  hermes-gateway-system-service.md  honcho-memory.md  slack-channel-isolation-honcho.md  va-tolling-ingest.md  ynab-budget-channel.md
docs/schemas/: va-i95-i495-trip-pricing.md
docs/specs/: budget-bot.md
infra/honcho/: .env.example  README.md  docker-compose.yml
infra/honcho/codex_bridge/: .dockerignore  .env.example  Dockerfile  pyproject.toml
infra/honcho/codex_bridge/codex_bridge/: __init__.py  auth.py  bridge.py  chat.py  config.py  embeddings.py  main.py
infra/honcho/codex_bridge/tests/: test_app.py  test_auth.py  test_bridge.py  test_chat.py  test_embeddings.py
scripts/: fetch-honcho-source.sh  honcho-nightly-backup.sh  honcho-smoke-test.sh  run-va-toll-ingest.sh
sql/va_tolling/: 001_create_role_and_database.sql  002_schema.sql
tools/va_toll_ingest/: pyproject.toml
tools/va_toll_ingest/tests/: test_config.py  test_db.py  test_main.py  test_normalize.py  test_time_windows.py
tools/va_toll_ingest/tests/fixtures/: i95_trip_pricing_synthetic.csv
tools/va_toll_ingest/va_toll_ingest/: client.py  config.py  db.py  main.py  normalize.py  time_windows.py
tools/ynab_mcp/: README.md  pyproject.toml
tools/ynab_mcp/tests/: test_client.py  test_config.py  test_server.py
tools/ynab_mcp/ynab_mcp/: __init__.py  client.py  config.py  errors.py  server.py
